<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/title_text_color"
    tools:context="com.test.feiyun.demo.Activity.UpdateHWActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/titlebar_color">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="个人信息更新"
            android:textSize="20sp"
            android:textColor="@color/title_text_color"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:text="@string/per_info"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginLeft="11dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:text="@string/height"
            android:textColor="@color/text_gray"
            android:textSize="15sp"
            android:layout_marginLeft="11dp"
            />
        <EditText
            android:layout_width="0dp"
            android:id="@+id/update_height"
            android:hint="cm"
            android:textColor="@color/black"
            android:textColorHint="@color/text_gray"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="35dp"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:text="@string/weight"
            android:textColor="@color/text_gray"
            android:textSize="15sp"
            android:layout_marginLeft="11dp"
            />
        <EditText
            android:layout_width="0dp"
            android:id="@+id/update_weight"
            android:textColor="@color/black"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="kg"
            android:textColorHint="@color/text_gray"
            android:layout_marginLeft="35dp"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@color/line_gray_w"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center|bottom">

        <Button
            android:id="@+id/update_confirm"
            android:layout_width="304dp"
            android:layout_height="@dimen/titlebar_height"
            android:layout_marginBottom="50dp"
            android:background="@drawable/corners_sm"
            android:text="@string/confirm"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>
